Fix user, profile and event-type